// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apis/StyleSheet/flattenStyle should merge style objects 1`] = `
Object {
  "opacity": 1,
  "order": 2,
}
`;

exports[`apis/StyleSheet/flattenStyle should override style properties 1`] = `
Object {
  "backgroundColor": "#023c69",
  "order": null,
}
`;

exports[`apis/StyleSheet/flattenStyle should overwrite properties with \`undefined\` 1`] = `
Object {
  "backgroundColor": undefined,
}
`;

exports[`apis/StyleSheet/flattenStyle should recursively flatten arrays 1`] = `
Object {
  "opacity": 1,
  "order": 3,
}
`;
